--- a/package.json
+++ b/package.json
@@ -19,4 +19,9 @@
   "author": "Antonio Garcia Leon",
   "license": "MIT",
   "homepage": "https://github.com/agl0809/grunt-jasmine-basic-app",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jasmine": "^0.9.2",
+    "grunt-contrib-jshint": "^0.11.3"
+  }
 }
