--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "grunt-jasmine-basic-app",
-  "version": "0.2.0",
-  "description": "Example and guide about how to create a basic project ready to write unit tests and check validation of code",
+  "name": "grunt-jasmine-boilerplate",
+  "version": "0.3.0-0",
+  "description": "Boilerplate and guide about how to create a basic project ready to write unit tests and code coverage",
   "main": "src/app.js",
   "scripts": {
     "test": "grunt test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agl0809/grunt-jasmine-basic-app.git"
+    "url": "git+https://github.com/agl0809/grunt-jasmine-boilerplate.git"
   },
   "keywords": [
     "javascript",
@@ -18,7 +18,7 @@
   ],
   "author": "Antonio Garcia Leon",
   "license": "MIT",
-  "homepage": "https://github.com/agl0809/grunt-jasmine-basic-app",
+  "homepage": "https://github.com/agl0809grunt-jasmine-boilerplate",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jasmine": "^0.9.2",
