--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ node_js:
   - "stable"
 before_install: npm install -g grunt-cli
 install: npm install
-before_script: grunt
+before_script: grunt test
