--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grunt-jasmine-boilerplate",
   "version": "0.3.0-0",
   "description": "Boilerplate and guide about how to create a basic project ready to write unit tests and code coverage",
-  "main": "src/app.js",
+  "main": "src/Person.js",
   "scripts": {
     "test": "grunt test"
   },
@@ -14,7 +14,8 @@
     "javascript",
     "grunt",
     "jasmine",
-    "jshint"
+    "jshint",
+    "coverage"
   ],
   "author": "Antonio Garcia Leon",
   "license": "MIT",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jasmine": "^0.9.2",
-    "grunt-contrib-jshint": "^0.11.3"
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-template-jasmine-istanbul": "^0.4.0"
   }
 }
