--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jasmine": "^0.9.2",
     "grunt-contrib-jshint": "^0.11.3",
+    "grunt-coveralls": "^1.0.0",
     "grunt-template-jasmine-istanbul": "^0.4.0"
   }
 }
